replace the deprecated new Long(long) by Long.valueOf(long)