@@ -86,150 +86,150 @@ public class Key extends Storage {
     /**
      * The identifier for a RSA key.
      */
-    public static final Long RSA = new Long(PKCS11Constants.CKK_RSA);
+    public static final Long RSA = Long.valueOf(PKCS11Constants.CKK_RSA);
 
     /**
      * The identifier for a DSA key.
      */
-    public static final Long DSA = new Long(PKCS11Constants.CKK_DSA);
+    public static final Long DSA = Long.valueOf(PKCS11Constants.CKK_DSA);
 
     /**
      * The identifier for a Diffi-Hellman key.
      */
-    public static final Long DH = new Long(PKCS11Constants.CKK_DH);
+    public static final Long DH = Long.valueOf(PKCS11Constants.CKK_DH);
 
     /**
      * The identifier for a EC key.
      */
-    public static final Long EC = new Long(PKCS11Constants.CKK_EC);
+    public static final Long EC = Long.valueOf(PKCS11Constants.CKK_EC);
 
     /**
      * The identifier for a EC EDWARDS key.
      */
-    public static final Long EC_EDWARDS = new Long(PKCS11Constants.CKK_EC_EDWARDS);
+    public static final Long EC_EDWARDS = Long.valueOf(PKCS11Constants.CKK_EC_EDWARDS);
 
     /**
      * The identifier for a EC MONTGOMERY key.
      */
-    public static final Long EC_MONTGOMERY = new Long(PKCS11Constants.CKK_EC_MONTGOMERY);
+    public static final Long EC_MONTGOMERY = Long.valueOf(PKCS11Constants.CKK_EC_MONTGOMERY);
 
     /**
      * The identifier for a HKDF key.
      */
-    public static final Long HKDF = new Long(PKCS11Constants.CKK_HKDF);
+    public static final Long HKDF = Long.valueOf(PKCS11Constants.CKK_HKDF);
 
     /**
      * The identifier for a EC key.
      */
-    public static final Long X9_42_DH = new Long(PKCS11Constants.CKK_X9_42_DH);
+    public static final Long X9_42_DH = Long.valueOf(PKCS11Constants.CKK_X9_42_DH);
 
     /**
      * The identifier for a KEA key.
      */
-    public static final Long KEA = new Long(PKCS11Constants.CKK_KEA);
+    public static final Long KEA = Long.valueOf(PKCS11Constants.CKK_KEA);
 
     /**
      * The identifier for a generic secret key.
      */
     public static final Long GENERIC_SECRET =
-        new Long(PKCS11Constants.CKK_GENERIC_SECRET);
+        Long.valueOf(PKCS11Constants.CKK_GENERIC_SECRET);
 
     /**
      * The identifier for a RC2 key.
      */
-    public static final Long RC2 = new Long(PKCS11Constants.CKK_RC2);
+    public static final Long RC2 = Long.valueOf(PKCS11Constants.CKK_RC2);
 
     /**
      * The identifier for a RC4 key.
      */
-    public static final Long RC4 = new Long(PKCS11Constants.CKK_RC4);
+    public static final Long RC4 = Long.valueOf(PKCS11Constants.CKK_RC4);
 
     /**
      * The identifier for a DES key.
      */
-    public static final Long DES = new Long(PKCS11Constants.CKK_DES);
+    public static final Long DES = Long.valueOf(PKCS11Constants.CKK_DES);
 
     /**
      * The identifier for a double-length DES key.
      */
-    public static final Long DES2 = new Long(PKCS11Constants.CKK_DES2);
+    public static final Long DES2 = Long.valueOf(PKCS11Constants.CKK_DES2);
 
     /**
      * The identifier for a trible-length DES key (Trible-DES).
      */
-    public static final Long DES3 = new Long(PKCS11Constants.CKK_DES3);
+    public static final Long DES3 = Long.valueOf(PKCS11Constants.CKK_DES3);
 
     /**
      * The identifier for a CAST key.
      */
-    public static final Long CAST = new Long(PKCS11Constants.CKK_CAST);
+    public static final Long CAST = Long.valueOf(PKCS11Constants.CKK_CAST);
 
     /**
      * The identifier for a CAST3 key.
      */
-    public static final Long CAST3 = new Long(PKCS11Constants.CKK_CAST3);
+    public static final Long CAST3 = Long.valueOf(PKCS11Constants.CKK_CAST3);
 
     /**
      * The identifier for a CAST128 key.
      */
-    public static final Long CAST128 = new Long(PKCS11Constants.CKK_CAST128);
+    public static final Long CAST128 = Long.valueOf(PKCS11Constants.CKK_CAST128);
 
     /**
      * The identifier for a RC5 key.
      */
-    public static final Long RC5 = new Long(PKCS11Constants.CKK_RC5);
+    public static final Long RC5 = Long.valueOf(PKCS11Constants.CKK_RC5);
 
     /**
      * The identifier for a IDEA key.
      */
-    public static final Long IDEA = new Long(PKCS11Constants.CKK_IDEA);
+    public static final Long IDEA = Long.valueOf(PKCS11Constants.CKK_IDEA);
 
     /**
      * The identifier for a SKIPJACK key.
      */
-    public static final Long SKIPJACK = new Long(PKCS11Constants.CKK_SKIPJACK);
+    public static final Long SKIPJACK = Long.valueOf(PKCS11Constants.CKK_SKIPJACK);
 
     /**
      * The identifier for a BATON key.
      */
-    public static final Long BATON = new Long(PKCS11Constants.CKK_BATON);
+    public static final Long BATON = Long.valueOf(PKCS11Constants.CKK_BATON);
 
     /**
      * The identifier for a JUNIPER key.
      */
-    public static final Long JUNIPER = new Long(PKCS11Constants.CKK_JUNIPER);
+    public static final Long JUNIPER = Long.valueOf(PKCS11Constants.CKK_JUNIPER);
 
     /**
      * The identifier for a CDMF key.
      */
-    public static final Long CDMF = new Long(PKCS11Constants.CKK_CDMF);
+    public static final Long CDMF = Long.valueOf(PKCS11Constants.CKK_CDMF);
 
     /**
      * The identifier for a AES key.
      */
-    public static final Long AES = new Long(PKCS11Constants.CKK_AES);
+    public static final Long AES = Long.valueOf(PKCS11Constants.CKK_AES);
 
     /**
      * The identifier for a Blowfish key.
      */
-    public static final Long BLOWFISH = new Long(PKCS11Constants.CKK_BLOWFISH);
+    public static final Long BLOWFISH = Long.valueOf(PKCS11Constants.CKK_BLOWFISH);
 
     /**
      * The identifier for a Twofish key.
      */
-    public static final Long TWOFISH = new Long(PKCS11Constants.CKK_TWOFISH);
+    public static final Long TWOFISH = Long.valueOf(PKCS11Constants.CKK_TWOFISH);
 
     /**
      * The identifier for a SM2 key.
      */
     public static final Long VENDOR_SM2 =
-        new Long(PKCS11Constants.CKK_VENDOR_SM2);
+        Long.valueOf(PKCS11Constants.CKK_VENDOR_SM2);
 
     /**
      * The identifier for a SM4 key.
      */
     public static final Long VENDOR_SM4 =
-        new Long(PKCS11Constants.CKK_VENDOR_SM4);
+        Long.valueOf(PKCS11Constants.CKK_VENDOR_SM4);
 
     /**
      * The identifier for a VENDOR_DEFINED key. Any Long object with a
@@ -237,7 +237,7 @@ public class Key extends Storage {
      * type identifier.
      */
     public static final Long VENDOR_DEFINED =
-        new Long(PKCS11Constants.CKK_VENDOR_DEFINED);
+        Long.valueOf(PKCS11Constants.CKK_VENDOR_DEFINED);
 
   }
 
